style: set max line length to 320

--- a/stim_data_exploration.ipynb
+++ b/stim_data_exploration.ipynb
@@ -63,21 +63,13 @@
     "                * 1e6\n",
     "            )  # convert to uV\n",
     "            electrode_labels_upper = np.char.upper(electrode_labels)\n",
-    "            data_slice[electrode_labels_upper == stim_site.split(\"-\")[0].upper()] *= (\n",
-    "                0  # remove the electrode that is the stimulation site\n",
-    "            )\n",
-    "            data_slice[electrode_labels_upper == stim_site.split(\"-\")[1].upper()] *= (\n",
-    "                0  # remove the electrode that is the stimulation site\n",
-    "            )\n",
+    "            data_slice[electrode_labels_upper == stim_site.split(\"-\")[0].upper()] *= 0  # remove the electrode that is the stimulation site\n",
+    "            data_slice[electrode_labels_upper == stim_site.split(\"-\")[1].upper()] *= 0  # remove the electrode that is the stimulation site\n",
     "\n",
-    "            if (data_slice.shape[1] % n_average_samples != 0) or (\n",
-    "                data_slice.shape[1] // n_average_samples != 40\n",
-    "            ):\n",
+    "            if (data_slice.shape[1] % n_average_samples != 0) or (data_slice.shape[1] // n_average_samples != 40):\n",
     "                continue  # skip if not divisible by n_average_samples\n",
     "\n",
-    "            data_slice = data_slice.reshape(\n",
-    "                *data_slice.shape[:-1], -1, n_average_samples\n",
-    "            ).mean(axis=-1)  # average inside bins\n",
+    "            data_slice = data_slice.reshape(*data_slice.shape[:-1], -1, n_average_samples).mean(axis=-1)  # average inside bins\n",
     "            sampling_rate_averaged = sampling_rate // n_average_samples\n",
     "            stimulations[stim_site][stim_current].append(data_slice)\n",
     "\n",
@@ -272,11 +264,7 @@
    "source": [
     "chosen_electrode_responses = all_responses[:, chosen_electrode_index, :]\n",
     "\n",
-    "ramp = (\n",
-    "    np.arange(chosen_electrode_responses.shape[1] // 2)\n",
-    "    / chosen_electrode_responses.shape[1]\n",
-    "    * 100\n",
-    ")\n",
+    "ramp = np.arange(chosen_electrode_responses.shape[1] // 2) / chosen_electrode_responses.shape[1] * 100\n",
     "chosen_electrode_target_response = np.concatenate([ramp, ramp[::-1]])\n",
     "\n",
     "chosen_electrode_target_response = np.sin(chosen_electrode_target_response / 10) * 50\n",
@@ -324,9 +312,7 @@
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()\n",
     "\n",
-    "print(\n",
-    "    f\"Correlation between target and predicted: {np.corrcoef(chosen_electrode_target_response, y_pred_best)[0, 1]:.4f}\"\n",
-    ")"
+    "print(f\"Correlation between target and predicted: {np.corrcoef(chosen_electrode_target_response, y_pred_best)[0, 1]:.4f}\")"
    ]
   },
   {
@@ -373,9 +359,7 @@
     "    if coef == 0:\n",
     "        continue\n",
     "    electrode_pair, stim_amplitude = key\n",
-    "    print(\n",
-    "        f\"Stimulate the pair {electrode_pair} at {stim_amplitude * coef * 1000:.3f} mA\"\n",
-    "    )"
+    "    print(f\"Stimulate the pair {electrode_pair} at {stim_amplitude * coef * 1000:.3f} mA\")"
    ]
   },
   {
@@ -398,9 +382,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Calculate mean and SEM across trials (axis 0)\n",
-    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(\n",
-    "    axis=0\n",
-    ")  # Shape: (n_timebins, n_electrodes)\n",
+    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(axis=0)  # Shape: (n_timebins, n_electrodes)\n",
     "mean_voltage = data_slices_averaged\n",
     "sem_voltage = data_slices_averaged * 0\n",
     "\n",
@@ -468,9 +450,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Calculate mean and SEM across trials (axis 0)\n",
-    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(\n",
-    "    axis=0\n",
-    ")  # Shape: (n_timebins, n_electrodes)\n",
+    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(axis=0)  # Shape: (n_timebins, n_electrodes)\n",
     "mean_voltage = data_slices_averaged\n",
     "sem_voltage = data_slices_averaged * 0\n",
     "\n",
@@ -536,11 +516,7 @@
     "n_timesteps_walkback = 6\n",
     "all_responses_arrays = []\n",
     "for i in range(n_timesteps_walkback):\n",
-    "    all_responses_arrays.append(\n",
-    "        original_all_responses[\n",
-    "            :, :, i : original_all_responses.shape[-1] - (n_timesteps_walkback - i)\n",
-    "        ]\n",
-    "    )\n",
+    "    all_responses_arrays.append(original_all_responses[:, :, i : original_all_responses.shape[-1] - (n_timesteps_walkback - i)])\n",
     "all_responses = np.concatenate(all_responses_arrays, axis=0)"
    ]
   },
@@ -598,16 +574,10 @@
    "source": [
     "chosen_electrode_responses = all_responses[:, chosen_electrode_index, :]\n",
     "\n",
-    "ramp = (\n",
-    "    np.arange(chosen_electrode_responses.shape[1] // 2)\n",
-    "    / chosen_electrode_responses.shape[1]\n",
-    "    * 100\n",
-    ")\n",
+    "ramp = np.arange(chosen_electrode_responses.shape[1] // 2) / chosen_electrode_responses.shape[1] * 100\n",
     "chosen_electrode_target_response = np.concatenate([ramp, ramp[::-1]])\n",
     "\n",
-    "chosen_electrode_target_response = (\n",
-    "    np.sin(chosen_electrode_target_response / 10) * 100\n",
-    ")  # 2000\n",
+    "chosen_electrode_target_response = np.sin(chosen_electrode_target_response / 10) * 100  # 2000\n",
     "\n",
     "# Create target for all electrodes - chosen electrode gets the target shape, others get 0\n",
     "n_electrodes = all_responses.shape[1]\n",
@@ -623,9 +593,7 @@
     "\n",
     "# Prepare data for regression - reshape to (n_samples, n_features)\n",
     "# We want each electrode-timebin combination as a separate sample\n",
-    "X = all_responses.transpose(1, 2, 0).reshape(\n",
-    "    -1, all_responses.shape[0]\n",
-    ")  # Shape: (n_electrodes * n_timebins, n_trials)\n",
+    "X = all_responses.transpose(1, 2, 0).reshape(-1, all_responses.shape[0])  # Shape: (n_electrodes * n_timebins, n_trials)\n",
     "\n",
     "# Find best alpha using cross-validation or grid search\n",
     "alphas = np.logspace(1, 10, 50)  # Range of alpha values to test\n",
@@ -669,9 +637,7 @@
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()\n",
     "\n",
-    "print(\n",
-    "    f\"Correlation between target and predicted: {np.corrcoef(chosen_electrode_target_response, y_pred_reshaped[chosen_electrode_index, :])[0, 1]:.4f}\"\n",
-    ")"
+    "print(f\"Correlation between target and predicted: {np.corrcoef(chosen_electrode_target_response, y_pred_reshaped[chosen_electrode_index, :])[0, 1]:.4f}\")"
    ]
   },
   {
@@ -779,9 +745,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Calculate mean and SEM across trials (axis 0)\n",
-    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(\n",
-    "    axis=0\n",
-    ")  # Shape: (n_timebins, n_electrodes)\n",
+    "data_slices_averaged = (all_responses * best_ridge.coef_.reshape(-1, 1, 1)).sum(axis=0)  # Shape: (n_timebins, n_electrodes)\n",
     "mean_voltage = data_slices_averaged\n",
     "sem_voltage = data_slices_averaged * 0\n",
     "\n",
@@ -850,9 +814,7 @@
     "\n",
     "# Calculate mean and SEM across trials (axis 0)\n",
     "mean_voltage = np.mean(data_slices_averaged, axis=0)  # Shape: (1280, 102)\n",
-    "sem_voltage = np.std(data_slices_averaged, axis=0) / np.sqrt(\n",
-    "    data_slices.shape[0]\n",
-    ")  # Shape: (1280, 102)\n",
+    "sem_voltage = np.std(data_slices_averaged, axis=0) / np.sqrt(data_slices.shape[0])  # Shape: (1280, 102)\n",
     "\n",
     "# Create time axis\n",
     "n_timesamples = data_slices_averaged.shape[2]\n",
